head/master:

 - Added new setter/getter method pair outputZeroBasedIndices(bool)/outputZeroBasedIndices() to class Pharm::FileScreeningHitCollector
   that allows to control whether any indices (mol. index, conf. index, etc.) stored to mol. SD entries shall be zero- or one-based
 - The command line tool 'PSDScreen' now offers a new option -r that allows to specify a report file in which
   sceening hit information gets written as lines of tab-separated values (without any mol. structure data).
   The new option can be used in additon or instead of option -o which, as before, specifies an output file for saving
   structural hit molecule data
 - Reduction of RAM consumption when querying pharmacophore feature count data stored in PSD files
 - Reduction of pharmacophore screening database (PSD) file sizes by ~55% due to the introduction of more compact
   molecule/pharmacophore data storage formats
 - Fixed a bug in the command line tool 'StructGen' that lead to process termination caused by a Base::ItemNotFound
   exception which was thrown when exceeding the set time limit without having generated a set of 3D atom coordinates

V1.2.1:
 - New implementation of Greene's algorithm for the calculation of atom hydrophobicities which
   is now more correct and ~100 times faster than the previous one
 - All disk space consumed by an existing pharmacophore screening database (PSD) that is specified as
   destination file for a new database to be created by the program 'PSDCreate' is now
   completely freed and not just internally marked as unallocated space
 - Fixed a bug in function Pharm::removePositionalDuplicates(Pharmacophore&) that resulted in the
   duplicate features (that should be removed) to be retained instead of the non-duplicated ones
 - Sphinx documentation updates

V1.2.0:
 - Added new setter/getter method pair groupReferenceFeatures()/referenceFeaturesGrouped() to class Pharm::PharmacophoreFitScore for controlling